--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h1>Ред вожње</h1>
 		</div>
 		<div class="jumbotroon">
-		<p> На нашoj апликацији можете видети све линије и ред вожње, за <b id="vreme"></b>. годину.
+		<p> На нашoj страници можете видети све линије и ред вожње, за <b id="vreme"></b>. годину.
 		</p>
 		</div>
 
@@ -80,12 +80,12 @@
 					<th>долазак</th>
 					<th>време доласка</th>
 					</tr>
-					<tr >
+					<tr>
 					</tr>
 					</table>
 		</div>
 		<br>
-		<marquee behavior="scroll" direction="left" id="reklama">Ускоро нове линије, пратите наш портал и користите све наше повољности и бенефите које вам наша железница може понудити!</marquee>
+		<marquee behavior="scroll" direction="left" id="reklama">Ускоро нове линије, пратите нашу страницу и користите све наше повољности и бенефите које вам наша железница може понудити!</marquee>
 		<br>
 		<div class="jumbotroon1">
 			<div class="jumbotroon11"><img src="img/voz.jpg" alt="zeleznica"></div>
