--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keyword" content="voz, prevoz, putovanje, red voznje"/>
 		<meta name="author" content="zwebb">
 		<title>Задатак - Славиша Стаменковић</title>
-
+		<link rel="shortcut icon" href="img/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/response.css">
