--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
 		<meta name="keyword" content="voz, prevoz, putovanje, red voznje"/>
 		<meta name="author" content="zwebb">
 		<title>Задатак - Славиша Стаменковић</title>
-		<link rel="shortcut icon" href="img/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/response.css">
-		
+		<link rel="stylesheet" type="text/css" href="css/response.css">	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+		<link rel="shortcut icon" href="~/favicon.ico">
 		</head>	
 	<body>
 		<div class="container">
