--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="shortcut icon" href="~/favicon.ico">
+		<link rel="shortcut icon" href="zadatak/img/favicon.ico">
 		</head>	
 	<body>
 		<div class="container">
